<?xml version="1.0"?>
<package format="2">
  <name>geometry_msgs_data_buffer</name>
  <version>0.0.0</version>
  <description>The geometry_msgs_data_buffer package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>data_buffer</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>quaternion_operation</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>data_buffer</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>quaternion_operation</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <exec_depend>data_buffer</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>quaternion_operation</exec_depend>
  <exec_depend>eigen</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
